src/test/ui/traits/issue-65673.stderr
error[E0277]: the size for values of type `(dyn Trait + 'static)` cannot be known at compilation time
  --> $DIR/issue-65673.rs:9:16
   |
LL |     type Ctx = dyn Alias<T>;
   |                ^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn Trait + 'static)`
note: associated types have an implicit `Sized` obligation
  --> $DIR/issue-65673.rs:4:5
   |
LL |     type Ctx;
   |     ^^^^^^^^^ required by associated type `WithType::Ctx`
help: consider relaxing the `Sized` obligation
   |
LL |     type Ctx: ?Sized;
   |             ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
